# Python-For-Ai

./: .gitignore  LICENSE  README.md
Docker/: README.txt
Math Fundamental/: 01_chpt1.py  02_chpt2.py  03_chpt3.py  04_chpt3_2.py  05_chpt4.py  main.py  pyproject.toml
MySQL advanced/: 001_JOINS.sql  002_UNIONS.sql  003_STRING_FUNCTIONS.sql  004_CASE_STATEMENTS.sql  005_SUBQUERIES.sql  006_WINDOW_FUNCTIONS.sql  007_CTE.sql  008_TEMP_TABLES.sql  009_STORED_PROCEDURES.sql  010_TRIGGERS_EVENTS.sql
Python advanced/: 001_Classes_Objects_plus.py  002_Inheritance_plus.py  003_Multithreading_plus.py  004_Synchronizing_Threads.py  005_Semaphore.py  006_Events_Threads.py  007_Daemon_Threads.py  008_Queue.py  009_Sockets_Network.py  010_Database.py  011_Recursion.py  012_XML_Processing.py  013_Logging.py  014_Magic_Methods_Dunder.py  015_Decorators.py  016_Generators.py  017_Argument_Parsing.py  018_Encapsulation.py  019_Type_Hinting.py  020_Factory_Design_Pattern.py  021_Proxy_Design_Pattern.py  022_Singleton_Design_Pattern.py  023_Composite_Design_Pattern.py  client.py  data.xml  logfile.txt  mydata.db
Python crash course/: 00_main.py  01_variables.py  02_data_types.py  03_string_method.py  04_control_flow.py  05_data_structures.py  06_functions.py  07_parameters.py  08_return_values.py  09_packages.py  10_api.py  11_data_analysis.py  12_practical_python.py  13_organizing_code.py  14_error_handling.py  15_classes.py  16_oop.py  17_methods_attributes.py  18_Inheritance.py  19_paradigms.py  20_git_github.py  21_git_github2.py  22_git_github3.py  23_env_secrets.py  analyzer.py  (+7 more)
(+35 files in other folders)
