[project]
name = "math-fund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
